--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,8 +6,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Copia os aruivos do repositorio
-        uses: actions/checkout@v4.1.0
+      - name: Copia os arquivos do repositório
+        uses: actions/checkout@v4
 
-      - name: Roda outro Comando
-        run: echo $(ls)
+      - name: Instalar o Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
