--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,3 +13,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
+      - name: Instalar Pytest
+        run: pip install pytest
+
+      - name: Rodar os testes
+        run: pytest pytools/libpythonpro/
