--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,4 +18,4 @@ jobs:
         run: pip install pytest
 
       - name: Rodar os testes
-        run: pytest pytools/libpythonpro/
+        run: pytest libpythonpro/
