--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,14 +14,11 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Instalar Pytest
-        run: pip install pytest
+      - name: Instalar Dependências
+        run: pip install -q -r requirements-dev.txt
 
       - name: Rodar os testes
         run: pytest libpythonpro/
-
-      - name: Instalar flake8
-        run: pip install flake8
 
       - name: Rodar o flake8
         run: flake8
