--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,4 +3,9 @@ mccabe==0.7.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
 pytest 7.4.2
+
+# Coverage
+coverage==7.3.2
+pytest-cov==4.1.0
+
 -r requirements.txt
