--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,11 +14,17 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Instalar Dependências
-        run: pip install -q -r requirements-dev.txt
+      - name: Instalar Pytest
+        run: pip install pytest
+
+      - name: instalar Coverage
+        run: pip install pytest-cov
 
       - name: Rodar os testes
-        run: pytest libpythonpro/
+        run: pytest libpythonpro/ --cov=libpythonpro/
+
+      - name: Instalar flake8
+        run: pip install flake8
 
       - name: Rodar o flake8
         run: flake8
