correção de erro de instalação de dependências.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Instalar dependências
+        run: pip install -q -r requirements-dev.txt
+
       - name: Instalar Pytest
         run: pip install pytest
 
