--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,4 +24,4 @@ jobs:
         run: pipenv run pytest libpythonpro/ --cov=libpythonpro/
 
       - name: Rodar o flake8
-        run: flake8
+        run: pipenv run flake8
